[package]
name = "complete"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A simple atomic check for completeness"
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/richardanaya/complete"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
